--- a/idex.html
+++ b/idex.html
@@ -12,6 +12,6 @@
     <main></main>
 
     <footer></footer>
-   <script src=".//js/ejercicio7.js"></script>
+   <script src="./js/ejercicio9.js"></script>
 </body>
 </html>
